--- a/rest-api-table/index.html
+++ b/rest-api-table/index.html
@@ -21,12 +21,36 @@
             background-color: rgb(243, 131, 131) !important;
             transition: all 0.5s ease;
         }
+
+        .table thead th {
+            border-bottom: none;
+        }
+
         th {
             min-width: 200px;
+            cursor: pointer;
         }
+
         td {
             max-width: 200px;
             word-break: break-word;
+        }
+
+        .sort-icons {
+            position: relative;
+            cursor: pointer;
+            margin-left: 10px;
+        }
+
+        .sort-icon {
+            position: absolute;
+            top: 2px;
+            left: 0px;
+            opacity: 0.5;
+        }
+
+        .active {
+            opacity: 1;
         }
     </style>
 </head>
@@ -41,10 +65,18 @@
             <table class="table table-striped table-hover">
                 <thead class="thead-dark">
                     <tr>
-                        <th>Họ tên</th>
-                        <th style="min-width: 100px">Năm sinh</th>
-                        <th>Email</th>
-                        <th>Số điện thoại</th>
+                        <th class="name-col field-col" onclick="studentSort(this)">Họ tên <span class="sort-icons"><i
+                                    class="fas fa-sort-up sort-icon"></i><i
+                                    class="fas fa-sort-down sort-icon"></i></span></th>
+                        <th class="birth-year-col field-col" style="min-width: 150px" onclick="studentSort(this)">Năm
+                            sinh <span class="sort-icons"><i class="fas fa-sort-up sort-icon"></i><i
+                                    class="fas fa-sort-down sort-icon"></i></span></th>
+                        <th class="email-col field-col" onclick="studentSort(this)">Email <span class="sort-icons"><i
+                                    class="fas fa-sort-up sort-icon"></i><i
+                                    class="fas fa-sort-down sort-icon"></i></span></th>
+                        <th class="phone-col field-col" onclick="studentSort(this)">Số điện thoại <span
+                                class="sort-icons"><i class="fas fa-sort-up sort-icon"></i><i
+                                    class="fas fa-sort-down sort-icon"></i></span></th>
                         <th>Action</th>
                     </tr>
                 </thead>
@@ -170,13 +202,18 @@
                 isLoading = false;
                 loadingStatus(isLoading)
                 rawData = result.students;
-                let htmlContent = '';
                 convertedData = convertData(rawData)
                 students = sortByTime(convertedData)
-                for (let i in students) {
-                    const s = students[i];
+                render(students)
+            });
+        }
 
-                    htmlContent += `
+        function render(data) {
+            let htmlContent = '';
+            for (let i in data) {
+                const s = data[i];
+
+                htmlContent += `
                     <tr>
                         <td>${s.name || ''}</td>
                         <td style="max-width: 100px">${s.birthYear || ''}</td>
@@ -192,10 +229,8 @@
                         </td>
                     </tr>
                 `
-                }
-
-                $('tbody').html(htmlContent);
-            });
+            }
+            $('tbody').html(htmlContent);
         }
 
         function deleteStudent(target) {
@@ -264,8 +299,6 @@
                 })
             }
         }
-
-
 
         function addNewStudent() {
             let isLoading = true;
@@ -414,6 +447,67 @@
                 return a['created'] - b['created']
             })
         }
+
+        function studentSort(target) {
+            $('.sort-icon').removeClass('active')
+            $('.field-col').not(target).removeClass('sorted')
+
+
+            // Sort by Name
+            if ($(target).hasClass('name-col') && $(target).hasClass('sorted') == false) {
+                students.sort(compare('name'))
+            } else if ($(target).hasClass('name-col')) {
+                students.sort(compareReverse('name'))
+            }
+            
+            // Sort by Birth Year
+
+            if ($(target).hasClass('birth-year-col') && $(target).hasClass('sorted') == false) {
+                students.sort(compareReverse('birthYear'))
+            } else if ($(target).hasClass('birth-year-col')) {
+                students.sort(compare('birthYear'))
+            }
+
+            // Sort by Email
+            
+            if ($(target).hasClass('email-col') && $(target).hasClass('sorted') == false) {
+                students.sort(compare('email'))
+            } else if ($(target).hasClass('email-col')) {
+                students.sort(compareReverse('email'))
+            }
+
+            // Sort by Phone 
+
+            if ($(target).hasClass('phone-col') && $(target).hasClass('sorted') == false) {
+                students.sort(compareReverse('phone'))
+            } else if ($(target).hasClass('phone-col')) {
+                students.sort(compare('phone'))
+            }
+
+            if ($(target).hasClass('sorted') == false) {
+                $(target).addClass('sorted');
+                sortIconStatus(target, status = "asc")
+            } else {
+                $(target).removeClass('sorted');
+                sortIconStatus(target, status = "desc")
+            }
+
+            render(students)
+        }
+
+        function sortIconStatus(parent, status) {
+            if (status == "asc") {
+                $(parent).find('.fa-sort-up').addClass('active')
+                $(parent).find('.fa-sort-down').removeClass('active')
+            } else {
+                $(parent).find('.fa-sort-up').removeClass('active')
+                $(parent).find('.fa-sort-down').addClass('active')
+            }
+        }
+
+        const compareReverse = (type) => (a, b) => a[type] == b[type] ? 0 : a[type] < b[type] ? -1 : 1;
+        const compare = (type) => (a, b) => a[type] == b[type] ? 0 : a[type] < b[type] ? 1 : -1;
+
 
         $(function () {
             renderContent();
