update state render, convert price

--- a/html-template/index.html
+++ b/html-template/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Shopping Cart</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Shopping Cart</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-  <link rel="stylesheet" href="style.css">
-</head>
+  <body>
+    <div id="root"></div>
 
-<body>
+    <script src="https://unpkg.com/react/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel" src="./js/header.js"></script>
+    <script type="text/babel" src="./js/products.js"></script>
+    <script type="text/babel" src="./js/checkout.js"></script>
 
-  <div id="root"></div>
+    <script type="text/babel">
+      function convertPrice(price) {
+        return new Intl.NumberFormat("vi-VN", {
+          style: "currency",
+          currency: "VND"
+        }).format(price);
+      }
+      const ShoppingCart = (
+        <main>
+          <ShoppingCartHeader />
+          <Products />
+          <Checkout />
+        </main>
+      );
 
-  <script src="https://unpkg.com/react/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script type="text/babel" src="./js/header.js"></script>
-  <script type="text/babel" src="./js/products.js"></script>
-  <script type="text/babel" src="./js/checkout.js"></script>
-
-  <script type='text/babel'>
-      const ShoppingCart =
-      <main>
-        <ShoppingCartHeader />
-        <Products />
-        <Checkout />
-      </main>;
-
-      ReactDOM.render(ShoppingCart, document.getElementById('root'))
+      ReactDOM.render(ShoppingCart, document.getElementById("root"));
     </script>
-</body>
-
+  </body>
 </html>
