--- a/html-template/index.html
+++ b/html-template/index.html
@@ -26,15 +26,70 @@
           currency: "VND"
         }).format(price);
       }
-      const ShoppingCart = (
-        <main>
-          <ShoppingCartHeader />
-          <Products />
-          <Checkout />
-        </main>
-      );
 
-      ReactDOM.render(ShoppingCart, document.getElementById("root"));
+      class ShoppingCart extends React.Component {
+        constructor(props) {
+          super(props);
+          this.state = {
+            products: [
+              {
+                name: "PRODUCT ITEM NUMBER 1",
+                image: "https://via.placeholder.com/200x150",
+                description: "Description for product item number 1",
+                price: 100000,
+                quantity: 10,
+                id: 1
+              },
+              {
+                name: "PRODUCT ITEM NUMBER 2",
+                image: "https://via.placeholder.com/200x150",
+                description: "Description for product item number 2",
+                price: 250000,
+                quantity: 3,
+                id: 2
+              },
+              {
+                name: "PRODUCT ITEM NUMBER 3",
+                image: "https://via.placeholder.com/200x150",
+                description: "Description for product item number 3",
+                price: 3000000,
+                quantity: 4,
+                id: 3
+              }
+            ],
+          };
+          this.handleQuantity = this.handleQuantity.bind(this);
+        }
+
+        handleQuantity = e => {
+          let value = event.target.value;
+          let id = event.target.getAttribute('data-key');
+          let products = this.state.products.map(product => {
+            if (product.id == id) {
+              product.quantity = Number(value);
+            }
+            return product
+          })
+          this.setState({
+            products: products
+          })
+        };
+
+        render() {
+          return (
+            <main>
+              <ShoppingCartHeader products={this.state.products} />
+              <Products
+                products={this.state.products}
+                totalProductsInBag={this.state.totalProductsInBag}
+                handleQuantity={this.handleQuantity}
+              />
+              <Checkout />
+            </main>
+          );
+        }
+      }
+      ReactDOM.render(<ShoppingCart />, document.getElementById("root"));
     </script>
   </body>
 </html>
