update counting total price w promo

--- a/html-template/index.html
+++ b/html-template/index.html
@@ -96,7 +96,7 @@
                 handleQuantity={this.handleQuantity}
                 removeProduct={this.removeProduct}
               />
-              <Checkout />
+              <Checkout products={this.state.products} />
             </main>
           );
         }
