fix product quantity, promo code

--- a/html-template/index.html
+++ b/html-template/index.html
@@ -64,8 +64,12 @@
         }
 
         handleQuantity = e => {
-          let value = event.target.value;
+          let { value, min, max } = event.target;
           let id = event.target.getAttribute('data-key');
+          if (value < 0) event.target.value = 0;
+          if (value > 20) event.target.value = 20;
+          value = Math.max(Number(min), Math.min(Number(max), Number(value)));
+          
           let products = this.state.products.map(product => {
             if (product.id == id) {
               product.quantity = Number(value);
