--- a/html-template/index.html
+++ b/html-template/index.html
@@ -58,9 +58,19 @@
                 id: 3
               }
             ],
+            promoCode: "",
+            input: "",
+            promoCodeList: {
+              "Autumn": 200000,
+              "Winter": 500000,
+              "Spring": 150000,
+              "Summer": 300000
+            }
           };
           this.handleQuantity = this.handleQuantity.bind(this);
           this.removeProduct = this.removeProduct.bind(this);
+          this.isPromoCodeValid = this.isPromoCodeValid.bind(this);
+          this.handleChange = this.handleChange.bind(this);
         }
 
         handleQuantity = e => {
@@ -94,6 +104,24 @@
           }
         }
 
+        componentDidMount() {
+          this.setState({
+            promoCode: "launched"
+          })
+        }
+
+        handleChange(e) {
+          this.setState({
+            input: event.target.value
+          })
+        }
+
+        isPromoCodeValid() {
+          this.setState({
+            promoCode: this.state.input
+          })
+        }
+
         render() {
           return (
             <main>
@@ -104,7 +132,11 @@
                 handleQuantity={this.handleQuantity}
                 removeProduct={this.removeProduct}
               />
-              <Checkout products={this.state.products} />
+              <Checkout products={this.state.products}
+              promoCode={this.state.promoCode}
+              promoCodeList={this.state.promoCodeList}
+              handleChange={this.handleChange}
+              isPromoCodeValid={this.isPromoCodeValid} />
             </main>
           );
         }
