update promoCode state on Mounted

--- a/html-template/index.html
+++ b/html-template/index.html
@@ -106,7 +106,7 @@
 
         componentDidMount() {
           this.setState({
-            promoCode: "launched"
+            promoCode: undefined
           })
         }
 
