--- a/html-template/index.html
+++ b/html-template/index.html
@@ -93,15 +93,25 @@
           });
         };
 
-        removeProduct = id => {
+        removeProduct = async id => {
           let products = [...this.state.products];
           products = products.filter(product => {
-            return product.id !== Number(id);
+            return product.id !== id;
           });
-          if (confirm("Are you sure")) {
-            this.setState({
-              products: products
-            });
+          try {
+            if (confirm("Are you sure")) {
+              await this.setState({
+                products: products
+              });
+              let totalProductsInBag = this.state.products.reduce((a, b) => {
+                return a + b.quantity;
+              }, 0);
+              await this.setState({
+                numberProduct: totalProductsInBag
+              });
+            }
+          } catch (error) {
+            console.log(error);
           }
         };
 
@@ -137,7 +147,7 @@
               />
               <Products
                 products={this.state.products}
-                totalProductsInBag={this.state.totalProductsInBag}
+                numberProduct={this.state.numberProduct}
                 handleQuantity={this.handleQuantity}
                 removeProduct={this.removeProduct}
               />
