update products info

--- a/react-shopping-cart/index.html
+++ b/react-shopping-cart/index.html
@@ -33,26 +33,30 @@
           this.state = {
             products: [
               {
-                name: "PRODUCT ITEM NUMBER 1",
-                image: "https://via.placeholder.com/200x150",
-                description: "Description for product item number 1",
-                price: 100000,
+                name: "Jordan 1 Retro High Obsidian UNC",
+                image: "./assets/Air-Jordan-1-Retro-High-UNC-Leather.jpg",
+                description:
+                  "Jordan Brand adds a new colorway to it’s hot streak of Jordan 1 releases with the Air Jordan 1 “Obsidian / University Blue”",
+                price: 9600000,
                 quantity: 10,
                 id: 1
               },
               {
-                name: "PRODUCT ITEM NUMBER 2",
-                image: "https://via.placeholder.com/200x150",
-                description: "Description for product item number 2",
-                price: 250000,
+                name: "New Balance 997S Bodega No Bad Days",
+                image: "./assets/New-Balance-997S-Bodega-No-Bad-Days.jpeg",
+                description:
+                  "The Bodega x New Balance 997S “No Bad Days” is set to be released on September 27 in-store",
+                price: 8400000,
                 quantity: 3,
                 id: 2
               },
               {
-                name: "PRODUCT ITEM NUMBER 3",
-                image: "https://via.placeholder.com/200x150",
-                description: "Description for product item number 3",
-                price: 3000000,
+                name: "adidas Yeezy Boost 700 Wave Runner Solid Grey",
+                image:
+                  "./assets/Adidas-Yeezy-Wave-Runner-700-Solid-Grey-Product.jpg",
+                description:
+                  "A new set of waves are rolling in as the adidas Yeezy Wave Runner 700s get ready for their first restock on March 10th, 2018",
+                price: 11760000,
                 quantity: 4,
                 id: 3
               }
