update react table

--- a/rest-api-table/index.html
+++ b/rest-api-table/index.html
@@ -489,6 +489,7 @@
         function convertData(source) {
             let arr = [];
             let key = []
+            debugger;
             for (let i in source) {
                 arr.push(source[i]);
                 key.push(i)
