--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="#">Giới thiệu</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#objective">Objective</a>
+                                <a class="nav-link" href="#objective">Mục tiêu</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#skills">Skills</a>
+                                <a class="nav-link" href="#skills">Kỹ năng</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Experience</a>
+                                <a class="nav-link" href="#">Kinh nghiệm</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#portfolio">Portfolio</a>
@@ -112,10 +112,12 @@
                     <h3 class="h3 text-uppercase font-weight-bold">
                         Giới thiệu.
                     </h3>
-
-                    <div class="infomation mt-5">
+                    <h4 class="h4 font-weight-bold sub-title mt-5">
+                        Giới thiệu chung.
+                    </h4>
+                    <div class="infomation">
                         <div class="infomation-paragraph">
-                            <ul class="list-unstyled">
+                            <ul>
                                 <li>
                                     <span class="label font-weight-bold">Họ tên:</span> Phạm Công Định
                                 </li>
@@ -142,7 +144,32 @@
                                     Nội
                                 </li>
                             </ul>
+                        </div>
+                    </div>
 
+                    <h4 class="h4 font-weight-bold sub-title mt-5">
+                        Học vấn.
+                    </h4>
+                    <div class="infomation">
+                        <div class="infomation-paragraph">
+                            <ul>
+                                <li>
+                                    <span class="label font-weight-bold">2016 - 2018:</span> Đại học Thương Mại
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <h4 class="h4 font-weight-bold sub-title mt-5">
+                        Giải thưởng.
+                    </h4>
+                    <div class="infomation">
+                        <div class="infomation-paragraph">
+                            <ul>
+                                <li>
+                                    <span class="label font-weight-bold">Giải nhất:</span> Cuộc thi hackathon Create eco website for your environment campaign
+                                </li>
+                            </ul>
                         </div>
                     </div>
 
@@ -156,7 +183,7 @@
                     </h3>
                     <div class="infomation mt-5">
                         <div class="infomation-paragraph">
-                            <ul class="list-unstyled">
+                            <ul>
                                 <li>
                                     Áp dụng kiến thức đã được học vào các dự án thực tế, hoàn thành công việc được phân
                                     công.
@@ -186,14 +213,29 @@
                         Kỹ năng.
                     </h3>
 
-                    <div class="information mt-5">
+                    <h4 class="h4 font-weight-bold sub-title mt-5">
+                        Kỹ năng lập trình.
+                    </h4>
+                    <div class="information-paragraph">
+                        <ul>
+                            <li><span class="label font-weight-bold">Ngôn ngữ:</span> HTML, CSS, Javascript.</li>
+
+                            <li><span class="label font-weight-bold">Nền tảng và frameworks:</span> Jquery, Bootstrap,
+                            SASS, ReactJs.</li>
+                        </ul>
+                    </div>
+
+                    <h4 class="h4 font-weight-bold sub-title mt-5">
+                        Kỹ năng khác.
+                    </h4>
+                    <div class="information">
                         <p>
                             <span class="label font-weight-bold">Ngôn ngữ:</span> HTML, CSS, Javascript.
                         </p>
 
                         <p>
-                            <span class="label font-weight-bold">Các nền tảng và frameworks:</span> Jquery, Bootstrap,
-                            SASS
+                            <span class="label font-weight-bold">Nền tảng và frameworks:</span> Jquery, Bootstrap,
+                            SASS, ReactJs
                         </p>
                     </div>
                     <div class="line mt-5"></div>
@@ -293,7 +335,7 @@
                         <img src="image/kanban.png" alt="kanban"
                             class="project-img project-img-five img-fluid my-5 rounded-lg">
                         <a href="https://cody0203.github.io/kanban-project/"
-                            class="project-link position-absolute">Kanban</a>
+                            class="project-link position-absolute">Kanban board</a>
                         <div class="technology text-center text">
                             <p>
                                 Ngôn ngữ: HTML, CSS, JS
@@ -324,6 +366,25 @@
                         </div>
                         <a href="https://cody0203.github.io/obo-stadium/" class="overlay"></a>
                     </div>
+
+                    <div class="project-item project-seven position-relative">
+                        <div class="number-order text">
+                            07.
+                        </div>
+                        <img src="image/react-quiz.png" alt="kanban"
+                            class="project-img project-img-five img-fluid my-5 rounded-lg">
+                        <a href="https://react-quiz-8c392.firebaseapp.com/"
+                            class="project-link position-absolute">Javascript Quizzes</a>
+                        <div class="technology text-center text">
+                            <p>
+                                Ngôn ngữ: HTML, CSS, JS
+                            </p>
+                            <p>
+                                Nền tảng: ReactJs
+                            </p>
+                        </div>
+                        <a href="https://react-quiz-8c392.firebaseapp.com/" class="overlay"></a>
+                    </div>
                 </div>
 
             </div>
@@ -334,7 +395,7 @@
                     </h3>
                     <div class="infomation mt-5">
                         <div class="infomation-paragraph">
-                            <ul class="list-unstyled">
+                            <ul>
                                 <li>
                                     Áp dụng kiến thức đã được học vào các dự án thực tế, hoàn thành công việc được phân
                                     công.
