--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
             <div id="second-part" class="col-md-7 ml-auto p-0">
 
-                <div class="about mx-5 mt-5" id="about">
+                <div class="about mx-5 pt-5" id="about">
                     <h3 class="h3 text-uppercase font-weight-bold mb-5">
                         Giới thiệu.
                     </h3>
@@ -102,29 +102,29 @@
                         <div class="infomation-paragraph">
                             <ul>
                                 <li>
-                                    <span class="label font-weight-bold">Họ tên:</span> Phạm Công Định
+                                    <span class="label font-weight-bold">Họ tên:</span> Phạm Công Định.
                                 </li>
 
                                 <li>
-                                    <span class="label font-weight-bold">Ngày sinh:</span> 02/03/1995
+                                    <span class="label font-weight-bold">Ngày sinh:</span> 02/03/1995.
                                 </li>
 
                                 <li>
-                                    <span class="label font-weight-bold">Giới tính:</span> Nam
+                                    <span class="label font-weight-bold">Giới tính:</span> Nam.
                                 </li>
 
                                 <li>
-                                    <span class="label font-weight-bold">Điện thoại:</span> 0365304675
+                                    <span class="label font-weight-bold">Điện thoại:</span> 0365304675.
                                 </li>
 
                                 <li>
-                                    <span class="label font-weight-bold">Email:</span> congdinh2395@gmail.com
+                                    <span class="label font-weight-bold">Email:</span> congdinh2395@gmail.com.
                                 </li>
 
                                 <li>
                                     <span class="label font-weight-bold">Địa chỉ:</span> 38/211 Khương Trung, Thanh
                                     Xuân, Hà
-                                    Nội
+                                    Nội.
                                 </li>
                             </ul>
                         </div>
@@ -138,7 +138,7 @@
                         <div class="infomation-paragraph">
                             <ul>
                                 <li>
-                                    <span class="label font-weight-bold">2016 - 2018:</span> Đại học Thương Mại - Chuyên ngành Quản Trị Kinh Doanh
+                                    <span class="label font-weight-bold">2016 - 2018:</span> Đại học Thương Mại - Chuyên ngành Quản Trị Kinh Doanh.
                                 </li>
                             </ul>
                         </div>
@@ -154,6 +154,7 @@
                                 <li>
                                     Năng động, nhiệt tình, cẩn thận, ham học hỏi, chủ động trong các công việc.
                                 </li>
+                                <li>Tính cầu tiến cao.</li>
                                 <li>Có khả năng làm việc độc lập hoặc teamwork tốt.</li>
                                 <li>Chịu được áp lực trong công việc.</li>
                             </ul>
@@ -195,11 +196,11 @@
                                 </li>
 
                                 <li>
-                                    Thành thạo ít nhất 1 ngôn ngữ lập trình.
+                                    Tiếp tục học tập và phát triển kĩ năng về front-end cũng như các thư viện, framework liên quan.
                                 </li>
 
                                 <li>
-                                    Tiếp tục học thêm các ngôn ngữ lập trình khác để tiếp tục trở thành Full Stack
+                                    Học thêm ít nhất một ngôn ngữ lập trình back-end để trở thành Full Stack
                                     Devoloper.
                                 </li>
                             </ul>
@@ -249,7 +250,7 @@
                 </div>
 
 
-                <div class="project mb-5 pt-5" id="portfolio">
+                <div class="project pt-5" id="portfolio">
                     <h3 class="h3 text-uppercase font-weight-bold mx-5 mb-5">
                         Dự án.
                     </h3>
