update portfolio responsive

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <section class="container-fluid position-relative">
         <div class="row">
-            <div id="first-part" class="col-md-5 h-100 fixed-position">
+            <div id="first-part" class="col-lg-5 h-100 fixed-position">
 
                 <nav class="navbar navbar-expand-xl navbar-light bg-light justify-content-end">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,7 +88,7 @@
                 </div>
 
             </div>
-            <div id="second-part" class="col-md-7 ml-auto p-0">
+            <div id="second-part" class="col-lg-7 ml-auto p-0">
 
                 <div class="about mx-5 pt-5" id="about">
                     <h3 class="h3 text-uppercase font-weight-bold mb-5">
