adding portfolio heading text

--- a/index.html
+++ b/index.html
@@ -377,11 +377,16 @@
 
         <div id="second-part" class="col-lg-6 ml-auto p-0">
           <div class="project pt-4 " id="portfolio">
-            <!-- <div class="container">
+            <div class="container special">
               <h3 class="h3 text-uppercase font-weight-bold mb-3">
-                Portfolio.
+                <a href="#portfolio" class="text-link">
+                  <i class="fas fa-link anchor-icon"></i>
+                  <span>
+                    Portfolio
+                  </span>
+                </a>
               </h3>
-            </div> -->
+            </div>
 
             <div class="project-item project-one position-relative">
               <div class="number-order text">
