--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <div class="infomation mt-5">
               <div class="infomation-paragraph">
                 <h4 class="h4 sub-title">
-                  9/2019 - Nay: Techmaster Việt Nam - Fresher Developer.
+                  9/2019 - Hiện tại: Techmaster Việt Nam - Fresher Developer.
                 </h4>
 
                 <ul>
